<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/include_title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#E8E8E8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shiming_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/shiming_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_authentiacion_name"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/back_edit_no_solid"
            android:inputType="text"
            android:maxLength="10"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/shiming_id"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_authentiacion_id"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/back_edit_no_solid"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cb_authentication_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_authentication_xieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shiming_tongyixieyi"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/shiming_biaozhu"
            android:textColor="@color/news_color"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_authentication_ok"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/btn_orange_twenty_no"
            android:text="@string/ok_send"
            android:textColor="@color/whitle"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>