<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"

                    android:layout_height="180dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huodong_shangjia"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/huodong_quanbushangjai"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <RelativeLayout
                android:background="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/btn_click"
                    android:text="@string/quxiao"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>