<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.me.activity.WalletActivity">


    <include layout="@layout/include_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/string_purse_balance"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tv_money_iocn"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="￥"
                    android:textColor="@color/color_gray_333333"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_wallet_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@+id/tv_money_iocn"
                    tools:text="￥31432"
                    android:text="0"
                    android:textColor="@color/color_gray_333333"
                    android:textSize="27sp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="41dp"
                android:background="@color/color_gray_E8E8E8" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="51dp">

                <TextView
                    android:id="@+id/tv_wallte_of_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/string_amount_of_cash"
                    android:textColor="@color/color_gray_333333"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_wallte_money_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/tv_wallte_of_cash"
                    android:gravity="center"
                    android:text="@string/string_money_icon"
                    android:textColor="@color/color_gray_333333"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_wallte_money"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/btn_wallte_all_wallte"
                    android:layout_toRightOf="@+id/tv_wallte_money_icon"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textCursorDrawable="@drawable/edit_cursor_color"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_wallte_all_wallte"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:text="@string/string_full_presentation"
                    android:textColor="@color/news_color"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/backe_e8e8e8" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/string_alipay_number"
                    android:textColor="@color/color_gray_333333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_wallte_alipay_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textCursorDrawable="@drawable/edit_cursor_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/backe_e8e8e8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/string_real_name"
                    android:textColor="@color/color_gray_333333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_wallte_real_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textCursorDrawable="@drawable/edit_cursor_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/backe_e8e8e8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/string_login_pwd"
                    android:textColor="@color/color_gray_333333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_wallte_login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textCursorDrawable="@drawable/edit_cursor_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/backe_e8e8e8" />

            <ImageButton
                android:id="@+id/ib_wallte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="100dp"
                android:background="@null"
                android:src="@drawable/icon_wallet" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>